#pragma once
#include "Session.h"
#include "DrawParam.h"

namespace VFrame30
{
	class Schema;
	class SchemaItem;

	static constexpr double ZoomStep = 10;

	class SchemaView
	{
	public:
		SchemaView();
		explicit SchemaView(std::shared_ptr<Schema> schema);

		// Painting
		//
	protected:
		void Ajust(QPainter* painter, double startX, double startY, double zoom) const;

		// Methods
		//
	public:
		virtual DrawMode drawMode() const = 0;

		[[nodiscard]] double realDpiX(const QPaintDevice* device) const;
		[[nodiscard]] double realDpiY(const QPaintDevice* device) const;

		virtual void setSchema(std::shared_ptr<Schema> schema, bool repaint);
		void setSchemaInternal(std::shared_ptr<Schema> schema);	// Use this when yoo dont need to update zoom, sliders, etc

		VFrame30::Schema* schema();
		const VFrame30::Schema* schema() const;

		std::shared_ptr<VFrame30::Schema> schemaSharedPtr();
		std::shared_ptr<VFrame30::Schema> schemaSharedPtr() const;

		// Properties
		//
	public:
		double zoom() const;

		const Session& session() const;
		Session& session();

		// Data
		//
	protected:
		std::shared_ptr<VFrame30::Schema> m_schema;

		double m_zoom = 100.0;

		Session m_session;

	};

	class SchemaViewWidget : public QWidget, public SchemaView
	{
		Q_OBJECT

	public:
		explicit SchemaViewWidget(QWidget* parent = nullptr);
		explicit SchemaViewWidget(std::shared_ptr<Schema> schema, QWidget* parent = nullptr);

	public:
		void updateControlWidgets(bool editMode);
		void deleteControlWidgets();

		bool MousePosToDocPoint(const QPoint& mousePos, QPointF* pDestDocPos, double dpiX = 0, double dpiY = 0);

		void setSchema(std::shared_ptr<Schema> schema, bool repaint) override;

		// Painting
		//
		void draw(CDrawParam& drawParam, const QRectF& clipRect);

	protected:
		virtual void paintEvent(QPaintEvent*) override;

		// Events
		//
	protected:
		virtual void mouseMoveEvent(QMouseEvent* event) override;

	public:
		// Properties
		//
		double setZoom(double value, bool repaint = true);

		// Signals
		//
	signals:
		void signal_schemaChanged(VFrame30::Schema* schema);
	};
}


