@startuml VFrame30
!include ../../doc/uml/Namespace.puml

!include Session.puml

'
' class VFrame30::SchemaView
'
class VFrame30::SchemaView #F0FFF0
{
    std::shared_ptr<VFrame30::Schema> : m_schema
    double : m_zoom
    Session : m_session
}

VFrame30::Schema --* VFrame30::SchemaView
VFrame30::Session --* VFrame30::SchemaView


'
' class VFrame30::SchemaViewWidget
'
class VFrame30::SchemaViewWidget #F0FFF0 extends VFrame30::SchemaView, VFrame30::QWidget
{
}

together {
	class VFrame30::QWidget #F0FFF0
}



@enduml